--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -721,6 +721,17 @@ body {
     width: 100%;
 }
 
+/* Disabled algorithm options */
+option.disabled-option {
+    color: #999;
+    font-style: italic;
+}
+
+option.disabled-option:disabled {
+    color: #666;
+    background-color: #f5f5f5;
+}
+
 .progress-row {
     display: flex;
     flex-direction: column;
